log
Wed, Mar 26, 2025  8:16:10 AM: 
 tests:  0|6
total_score: 0/70
25021aa
Wed, Mar 26, 2025  8:37:36 AM: 
 list.c | 9 +++++++--
 1 file changed, 7 insertions(+), 2 deletions(-)
In file included from test.c:5:0:
list.c: In function 'createList':
list.c:35:9: error: 'List {aka struct List}' has no member named 'size'
     list->size = 0;
         ^~
Compilation failed
a5b7bbc
Wed, Mar 26, 2025  8:38:23 AM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
d012f13
Wed, Mar 26, 2025  8:53:17 AM: 
 list.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  0|0
fbebb6a
Wed, Mar 26, 2025  9:00:01 AM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
f41b1d0
Wed, Mar 26, 2025  9:03:31 AM: 
 list.c | 7 +++++--
 1 file changed, 5 insertions(+), 2 deletions(-)
 tests:  0|0
378a717
Wed, Mar 26, 2025  9:04:36 AM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|4
total_score: 25/70
47d2f53
Wed, Mar 26, 2025  9:09:21 AM: 
 list.c | 13 +++++++++++--
 1 file changed, 11 insertions(+), 2 deletions(-)
 tests:  5|4
total_score: 25/70
82c12b8
Wed, Mar 26, 2025  9:10:46 AM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|4
total_score: 25/70
ea1dccb
